Endpoint /entries: Added support for "withdata" query parameter
